bug fix overflow hidden for ie7

--- a/assets/css/website.css
+++ b/assets/css/website.css
@@ -305,6 +305,8 @@
   width:880px;
   overflow: hidden;
   margin: 0px 40px;
+  height:100%;
+  position:relative;
 }
 
 #info {
